--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,18 @@
 {
+    "name": "samsonasik/apiglity-consumer",
+    "type": "library",
+    "description": "Apiglity Client API Service Consumer",
+    "keywords": ["apigility","zf3"],
+    "homepage": "https://github.com/samsonasik/ApigilityConsumer",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Abdul Malik Ikhsan",
+            "email": "samsonasik@gmail.com",
+            "homepage": "http://samsonasik.wordpress.com",
+            "role": "Developer"
+        }
+    ],
     "require": {
         "php": "^5.6|^7.0",
         "zendframework/zend-servicemanager": "^2.5|^3.0",
