--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "zendframework/zend-json": "^3.0"
     },
     "require-dev": {
-        "kahlan/kahlan": "dev-dev"
+        "kahlan/kahlan": "dev-dev",
+        "satooshi/php-coveralls": "^1.0",
+        "phpunit/phpcov": "~2.0"
     },
     "autoload": {
         "psr-4": {
