--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ before_script:
 
 script:
   - bin/kahlan --clover=clover.xml
-  - php ./vendor/bin/phpcov merge --clover ./clover.xml ./build/coverage/
-  - php ./vendor/bin/coveralls -v --exclude-no-stmt
+  - php ./bin/phpcov merge --clover ./clover.xml ./build/coverage/
+  - php ./bin/coveralls -v --exclude-no-stmt
