--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,12 @@
     ],
     "require": {
         "php": "^5.6|^7.0",
-        "zendframework/zend-servicemanager": "^2.5|^3.0",
         "zendframework/zend-json": "^3.0"
     },
     "require-dev": {
         "kahlan/kahlan": "dev-dev",
-        "satooshi/php-coveralls": "^1.0",
-        "phpunit/phpcov": "~2.0"
+        "zendframework/zend-http": "^2.5",
+        "zendframework/zend-servicemanager": "^2.5|^3.0"
     },
     "autoload": {
         "psr-4": {
