--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction
   - composer dump-autoload -o
+  - if [[ $TRAVIS_PHP_VERSION =~ ^7 ]]; then pecl install xdebug; fi
 
 script:
   - bin/kahlan --coverage=4 --reporter=verbose
