--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^5.6|^7.0",
-        "zendframework/zend-json": "^3.0"
+        "zendframework/zend-json": "^2.5|^3.0"
     },
     "require-dev": {
         "kahlan/kahlan": "dev-dev",
