--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     },
     "require-dev": {
         "kahlan/kahlan": "dev-dev",
+        "satooshi/php-coveralls": "^1.0",
         "zendframework/zend-http": "^2.5",
         "zendframework/zend-servicemanager": "^2.5|^3.0"
     },
