--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "zendframework/zend-json": "^2.5|^3.0"
     },
     "require-dev": {
-        "kahlan/kahlan": "dev-dev",
+        "kahlan/kahlan": "^3.0.0",
         "satooshi/php-coveralls": "^1.0",
         "zendframework/zend-http": "^2.5",
         "zendframework/zend-servicemanager": "^2.5|^3.0"
