add zend-component-installer support

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,11 @@
     },
     "config": {
         "bin-dir": "bin"
+    },
+    "extra": {
+        "zf": {
+            "module": "ApigilityConsumer",
+            "config-provider": "ApigilityConsumer\\ConfigProvider"
+        }
     }
 }
