--- a/config/apigility-consumer.local.php.dist
+++ b/config/apigility-consumer.local.php.dist
@@ -1,10 +1,12 @@
 <?php
 
 return [
-    'api-host-url' => 'http://api.host.com',
-    'oauth' => [
-        'grant_type'    => 'password', // can be client_credentials also
-        'client_id'     => 'foo',
-        'client_secret' => 'foo_s3cret',
+    'apigility-consumer' => [
+        'api-host-url' => 'http://api.host.com',
+        'oauth' => [
+            'grant_type'    => 'password', // can be client_credentials also
+            'client_id'     => 'foo',
+            'client_secret' => 'foo_s3cret',
+        ],
     ],
 ];
