run phpstan analyse on php 7.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ php:
 
 matrix:
   fast_finish: true
-  
+
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction
+  - if [[ $TRAVIS_PHP_VERSION = 7.1 ]]; then composer global require --dev phpstan/phpstan; fi
   - composer dump-autoload -o
+  - if [[ $TRAVIS_PHP_VERSION = 7.1 ]]; then ~/.composer/vendor/bin/phpstan analyse src/; fi
 
 script:
   - bin/kahlan --coverage=4 --reporter=verbose --clover=build/logs/clover.xml
