--- a/config/apigility-consumer.local.php.dist
+++ b/config/apigility-consumer.local.php.dist
@@ -5,27 +5,69 @@ use Zend\Http\Client as HttpClient;
 return [
     'apigility-consumer' => [
         'api-host-url' => 'http://api.host.com',
-        
+
         // for oauth
         'oauth' => [
+
+            //default selected client
             'grant_type'    => 'password', // or client_credentials
             'client_id'     => 'foo',
             'client_secret' => 'foo_s3cret',
+
+            // multiple clients to be selected
+            'clients' => [
+                'foo' => [ // foo is client_id
+                    'grant_type'    => 'password', // or client_credentials
+                    'client_secret' => 'foo_s3cret',
+                ],
+                'bar' => [ // bar is client_id
+                    'grant_type'    => 'password', // or client_credentials
+                    'client_secret' => 'bar_s3cret',
+                ],
+            ],
+
         ],
-        
+
         // for basic and or digest
         'auth' => [
-            
+
+            // default client
             HttpClient::AUTH_BASIC => [
                 'username' => 'foo',
                 'password' => 'foo_s3cret'
             ],
-            
+
             HttpClient::AUTH_DIGEST => [
                 'username' => 'foo',
                 'password' => 'foo_s3cret'
             ],
-            
+
+            // multiple clients to be selected
+            'clients' => [
+                'foo' => [
+                    HttpClient::AUTH_BASIC => [
+                        'username' => 'foo',
+                        'password' => 'foo_s3cret'
+                    ],
+
+                    HttpClient::AUTH_DIGEST => [
+                        'username' => 'foo',
+                        'password' => 'foo_s3cret'
+                    ],
+                ],
+                'bar' => [
+                    HttpClient::AUTH_BASIC => [
+                        'username' => 'bar',
+                        'password' => 'bar_s3cret'
+                    ],
+
+                    HttpClient::AUTH_DIGEST => [
+                        'username' => 'bar',
+                        'password' => 'bar_s3cret'
+                    ],
+                ],
+            ],
+
         ],
     ],
 ];
