config sample update

--- a/config/apigility-consumer.local.php.dist
+++ b/config/apigility-consumer.local.php.dist
@@ -44,7 +44,7 @@ return [
 
             // multiple clients to be selected
             'clients' => [
-                'foo' => [ // foo is client_id
+                'foo' => [ // foo is key represent just like "client_id" to ease switch per-client config
                     HttpClient::AUTH_BASIC => [
                         'username' => 'foo',
                         'password' => 'foo_s3cret'
@@ -55,7 +55,7 @@ return [
                         'password' => 'foo_s3cret'
                     ],
                 ],
-                'bar' => [ // bar is client_id
+                'bar' => [ // bar is key represent just like "client_id" to ease switch per-client config
                     HttpClient::AUTH_BASIC => [
                         'username' => 'bar',
                         'password' => 'bar_s3cret'
