--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,12 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^7.1",
         "zendframework/zend-json": "^2.5|^3.0"
     },
     "require-dev": {
         "kahlan/kahlan": "^3.0.0",
+        "phpstan/phpstan": "^0.6.4 || ^1.0",
         "satooshi/php-coveralls": "^1.0",
         "zendframework/zend-http": "^2.5",
         "zendframework/zend-servicemanager": "^2.5|^3.0"
