--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "kahlan/kahlan": "^3.0.0",
-        "phpstan/phpstan": "^0.6.4 || ^1.0",
+        "phpstan/phpstan": "dev-master",
         "satooshi/php-coveralls": "^1.0",
         "zendframework/zend-http": "^2.5",
         "zendframework/zend-servicemanager": "^2.5|^3.0"
