--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
     ],
     "require": {
         "php": "^7.1",
-        "zendframework/zend-json": "^2.5|^3.0"
+        "zendframework/zend-json": "^3.0",
+        "zendframework/zend-http": "^2.6",
+        "zendframework/zend-servicemanager": "^3.0.0"
     },
     "require-dev": {
-        "kahlan/kahlan": "^3.0.0",
+        "kahlan/kahlan": "^3.1.14",
         "phpstan/phpstan": "dev-master",
-        "satooshi/php-coveralls": "^1.0",
-        "zendframework/zend-http": "^2.5",
-        "zendframework/zend-servicemanager": "^2.5|^3.0"
+        "satooshi/php-coveralls": "^1.0.1"
     },
     "autoload": {
         "psr-4": {
