--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require-dev": {
         "kahlan/kahlan": "^3.1.14",
         "phpstan/phpstan": "dev-master",
-        "satooshi/php-coveralls": "^1.0.1"
+        "satooshi/php-coveralls": "^1.0.1",
+        "symfony/yaml": "^3.2.7"
     },
     "autoload": {
         "psr-4": {
