--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require-dev": {
         "kahlan/kahlan": "^3.1.14",
-        "phpstan/phpstan": "dev-master",
+        "phpstan/phpstan": "^0.7",
         "satooshi/php-coveralls": "^1.0.1",
         "symfony/yaml": "^3.2.7"
     },
