--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,9 @@
         "zendframework/zend-servicemanager": "^3.0.0"
     },
     "require-dev": {
-        "kahlan/kahlan": "^3.1.14",
+        "kahlan/kahlan": "^4.0",
         "phpstan/phpstan": "^0.9.1",
+        "psr/container": "^1.0",
         "satooshi/php-coveralls": "^1.0.1",
         "symfony/yaml": "^3.2.7"
     },
