--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,6 @@
 /.gitignore export-ignore
 /.travis.yml export-ignore
 /.coveralls.yml export-ignore
-/phpstan.neon
+/phpstan.neon export-ignore
 /test/ export-ignore
 /CONTRIBUTING.md export-ignore
