--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "zendframework/zend-servicemanager": "^3.3.0"
     },
     "require-dev": {
+        "guzzlehttp/guzzle": "^6.3",
         "kahlan/kahlan": "^4.0",
         "phpstan/phpstan": "^0.10",
         "php-coveralls/php-coveralls": "^2.0",
