--- a/.travis.yml
+++ b/.travis.yml
@@ -5,32 +5,38 @@ matrix:
     - php: 5.6
       env:
         - DEPS=lowest
+        - INSTALL_PHPSTAN=no
     - php: 5.6
       env:
         - DEPS=latest
+        - INSTALL_PHPSTAN=no
     - php: 7.0
       env:
         - DEPS=lowest
+        - INSTALL_PHPSTAN=no
     - php: 7.0
       env:
         - DEPS=latest
+        - INSTALL_PHPSTAN=no
     - php: 7.1
       env:
         - DEPS=lowest
+        - INSTALL_PHPSTAN=no
     - php: 7.1
       env:
         - DEPS=latest
+        - INSTALL_PHPSTAN=yes
 
 before_script:
   - mkdir -p build/logs
   - composer self-update
   - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --prefer-lowest --prefer-stable --no-interaction ; fi
   - if [[ $DEPS == 'latest' ]]; then travis_retry composer install --prefer-source --no-interaction ; fi
-  - if [[ $TRAVIS_PHP_VERSION = 7.1 && $DEPS == 'latest']]; then composer require --dev phpstan/phpstan; fi
+  - if [[ $INSTALL_PHPSTAN == 'yes']]; then composer require --dev phpstan/phpstan; fi
   - composer dump-autoload -o
 
 script:
-  - if [[ $TRAVIS_PHP_VERSION = 7.1 && $DEPS == 'latest']]; then bin/phpstan analyse src/ --level=7 -c phpstan.neon; fi
+  - if [[ $INSTALL_PHPSTAN == 'yes']]; then bin/phpstan analyse src/ --level=7 -c phpstan.neon; fi
   - bin/kahlan --coverage=4 --reporter=verbose --clover=build/logs/clover.xml
   - bin/coveralls -v --exclude-no-stmt
 
