--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,18 @@ matrix:
     - php: 7.2
       env:
         - DEPS=latest
+    - php: 7.3
+      env:
+        - DEPS=lowest
+    - php: 7.3
+      env:
+        - DEPS=latest
+    - php: 7.4snapshot
+      env:
+        - DEPS=lowest
+    - php: 7.4snapshot
+      env:
+        - DEPS=latest
 
 before_script:
   - mkdir -p build/logs
