--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "php": "^7.1",
         "zendframework/zend-http": "^2.6",
         "zendframework/zend-json": "^3.1.2",
-        "zendframework/zend-servicemanager": "^3.3.0"
+        "zendframework/zend-servicemanager": "^3.3.0",
+        "zendframework/zend-stdlib": "^3.2.1"
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^6.3",
