--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,15 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "laminas/laminas-http": "^2.6",
+        "php": "^7.3|~8.0",
+        "laminas/laminas-http": "^2.14",
         "laminas/laminas-json": "^3.1.2",
         "laminas/laminas-servicemanager": "^3.3.0",
-        "laminas/laminas-stdlib": "^3.2.1"
+        "laminas/laminas-stdlib": "^3.3"
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^6.3",
-        "kahlan/kahlan": "^4.0",
+        "kahlan/kahlan": "^5.0",
         "laminas/laminas-coding-standard": "^2.0",
         "php-coveralls/php-coveralls": "^2.0",
         "phpstan/phpstan": "^0.11.19",
