--- a/.travis.yml
+++ b/.travis.yml
@@ -3,32 +3,21 @@ language: php
 env:
   - XDEBUG_MODE=coverage
 
-matrix:
-  include:
-    - php: 7.3
-      env:
-        - DEPS=lowest
-    - php: 7.3
-      env:
-        - DEPS=latest
-    - php: 7.4
-      env:
-        - DEPS=lowest
-    - php: 7.4
-      env:
-        - DEPS=latest
-    - php: 8.0
-      env:
-        - DEPS=lowest
-    - php: 8.0
-      env:
-        - DEPS=latest
+php:
+  - 7.3
+  - 7.4
+  - 8.0
 
 before_script:
   - mkdir -p build/logs
   - composer self-update
-  - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --prefer-lowest --prefer-stable --no-interaction --ignore-platform-reqs ; fi
-  - if [[ $DEPS == 'latest' ]]; then travis_retry composer install --prefer-source --no-interaction --ignore-platform-reqs; fi
+  - |
+    if [ $(phpenv version-name) != '8.0' ]; then
+      travis_retry composer install --prefer-source --no-interaction
+    fi
+    if [ $(phpenv version-name) == '8.0' ]; then
+      travis_retry composer install --prefer-source --no-interaction --ignore-platform-req=php
+    fi
   - composer dump-autoload -o
 
 script:
