--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
       travis_retry composer install --prefer-source --no-interaction
     fi
     if [ $(phpenv version-name) == '8.0' ]; then
-      travis_retry composer install --prefer-source --no-interaction --ignore-platform-req=php
+      travis_retry composer install --prefer-source --no-interaction --ignore-platform-reqs
     fi
   - composer dump-autoload -o
 
