--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.3",
         "laminas/laminas-http": "^2.6",
         "laminas/laminas-json": "^3.1.2",
         "laminas/laminas-servicemanager": "^3.3.0",
@@ -33,10 +33,10 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^6.3",
-        "kahlan/kahlan": "^4.0",
-        "laminas/laminas-coding-standard": "^2.0",
+        "kahlan/kahlan": "4.6.4",
+        "laminas/laminas-coding-standard": "^2.1.4",
         "php-coveralls/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.11.19",
+        "phpstan/phpstan": "^0.12",
         "symfony/yaml": "^3.2.7"
     },
     "config": {
