--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
       - name: "Validate composer.json and composer.lock"
         run: "composer validate"
-        name: "Install dependencies"
+      - name: "Install dependencies"
         run: "composer install"
       - name: "Run test suite"
         run: "mkdir -p build/logs && bin/kahlan --coverage=4 --reporter=verbose --clover=build/logs/coverage.xml && bin/php-coveralls -v --exclude-no-stmt"
