--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -31,6 +31,7 @@ jobs:
         run: "mkdir -p build/logs && bin/kahlan --coverage=4 --reporter=verbose --clover=build/logs/clover.xml && bin/php-coveralls -v --exclude-no-stmt"
         env:
           XDEBUG_MODE: "coverage"
+          GITHUB_ACTIONS: "true"
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
