--- a/.travis.yml
+++ b/.travis.yml
@@ -7,29 +7,16 @@ env:
 matrix:
   include:
     - php: 7.3
-      env:
-        - DEPS=lowest
-    - php: 7.3
-      env:
-        - DEPS=latest
     - php: 7.4
-      env:
-        - DEPS=lowest
-    - php: 7.4
-      env:
-        - DEPS=latest
     - php: 8.0
-      env:
-        - DEPS=latest
 
 before_script:
   - mkdir -p build/logs
-  - if [[ $DEPS == 'lowest' ]]; then travis_retry composer update --prefer-lowest --prefer-stable --no-interaction ; fi
-  - if [[ $DEPS == 'latest' ]]; then travis_retry composer install --prefer-source --no-interaction ; fi
+  - travis_retry composer install --prefer-source --no-interaction
   - composer dump-autoload -o
 
 script:
-  - if [[ $DEPS == 'latest' ]]; then composer cs-check ; fi
+  - composer cs-check
   - bin/phpstan analyse src/ --level=max
   - bin/kahlan --coverage=4 --reporter=verbose --clover=build/logs/clover.xml
   - bin/php-coveralls -v --exclude-no-stmt
