--- a/composer.json
+++ b/composer.json
@@ -25,19 +25,18 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
-        "laminas/laminas-http": "^2.6",
-        "laminas/laminas-json": "^3.1.2",
-        "laminas/laminas-servicemanager": "^3.3.0",
-        "laminas/laminas-stdlib": "^3.2.1"
+        "php": "^8.0",
+        "laminas/laminas-http": "^2.14",
+        "laminas/laminas-json": "^3.2",
+        "laminas/laminas-servicemanager": "^3.6",
+        "laminas/laminas-stdlib": "^3.3"
     },
     "require-dev": {
-        "guzzlehttp/guzzle": "^6.3",
-        "kahlan/kahlan": "^4.0",
-        "laminas/laminas-coding-standard": "^2.0",
-        "php-coveralls/php-coveralls": "^2.0",
-        "phpstan/phpstan": "^0.12",
-        "symfony/yaml": "^3.2.7"
+        "guzzlehttp/guzzle": "^7.2",
+        "kahlan/kahlan": "^5.1.3",
+        "laminas/laminas-coding-standard": "^2.1.1",
+        "php-coveralls/php-coveralls": "^2.4",
+        "phpstan/phpstan": "^0.12.86"
     },
     "config": {
         "bin-dir": "bin"
