--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "kahlan/kahlan": "^5.1.3",
         "laminas/laminas-coding-standard": "^2.1.1",
         "php-coveralls/php-coveralls": "^2.4",
-        "phpstan/phpstan": "^0.12.86"
+        "phpstan/phpstan": "^0.12.86",
+        "rector/rector": "^0.11.20"
     },
     "config": {
         "bin-dir": "bin"
