--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "kahlan/kahlan": "^5.1.3",
         "laminas/laminas-coding-standard": "^2.1.1",
         "php-coveralls/php-coveralls": "^2.4",
-        "phpstan/phpstan": "^0.12.96",
+        "phpstan/phpstan": "^1.0",
         "rector/rector": "^0.11.52"
     },
     "config": {
@@ -58,7 +58,7 @@
             "ApigilityConsumer\\Spec\\": "spec/"
         }
     },
-    "minimum-stability": "alpha",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
         "cs-check": "phpcs",
