--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require-dev": {
         "guzzlehttp/guzzle": "^7.2",
-        "kahlan/kahlan": "^5.1.3",
+        "kahlan/kahlan": "dev-moving-to-github-action",
         "laminas/laminas-coding-standard": "^2.1.1",
         "php-coveralls/php-coveralls": "^2.4",
         "phpstan/phpstan": "^1.0",
